# CafeYike

./: .clang-format  .gitattributes  .gitignore  BDD_Eclipse_Format.xml  CafeYike.code-workspace  README.md  YikeManager.service  build.gradle  build.sh  database_upgrade.py  pom.xml  settings.gradle  start-detached.sh  start.sh
CafeYike/: .gitignore  pom.xml  settings.gradle
CafeYike/app/: build.gradle
CafeYikeMaven/: pom.xml
YikeManager/: .gitignore
YikeManager/ym-backend/: pyproject.toml  requirements.txt
YikeManager/ym-backend/yikemng/: __main__.py  bot_manager.py  config_manager.py  errors.py  main.py
YikeManager/ym-backend/yikemng/api/: admin.py  api_setup.py  bot_control.py
YikeManager/ym-frontend/: index.html  package-lock.json  package.json
YikeManager/ym-frontend/scripts/: main.js
YikeManager/ym-frontend/src/: App.vue  main.ts
YikeManager/ym-frontend/src/assets/: ym.css
YikeManager/ym-frontend/src/components/: bot-status.vue  console-log.vue
YikeManager/ym-frontend/style/: ym.css
YikeManager/ym-frontend/templates/: index.html
docker/: .bashrc  Dockerfile  bashrc_template.sh  start_java.sh  start_manager.sh  system_template.conf
sql/: addQuote.sql  addYikeLog.sql  editQuote.sql  editQuoteTs.sql  getQuoteByID.sql  getQuotes.sql  getYikes.sql  getYikesForServer.sql  incYike.sql  quoteSchema.sql  remYike.sql  rmQuote.sql  setYikes.sql  yikeSchema.sql
src/main/resources/: logback.xml
src/main/resources/sql/: addQuote.sql  addYikeLog.sql  getQuotes.sql  getYikesForUser.sql  incYike.sql  setYikes.sql
(+71 files in other folders)
