[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yikemng"
version = "1.0.0"
authors = [ {name="Alagyn"} ]
description = "Management API for a CafeYike instance"
readme = "../../README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/alagyn/CafeYike"

[tool.hatch.build.targets.wheel]
packages = ["yikemng", "yikemng.api"]